--- a/css/all.css
+++ b/css/all.css
@@ -3,11 +3,185 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
 
 .container {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
+}
+
+header .header__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header .header__left {
+  margin-top: 31px;
+}
+
+header .header__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header .header__right .search {
+  margin-top: 28px;
+  margin-right: 58.46px;
+}
+
+header .header__right .shops {
+  margin-top: 28px;
+  margin-right: 44.09px;
+}
+
+header .header__right .burger__menu {
+  margin-top: 32.17px;
+}
+
+footer {
+  padding-top: 29px;
+  padding-bottom: 22px;
+}
+
+footer .footer__top {
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+footer .footer__content {
+  margin-top: 29px;
+}
+
+footer .footer__content > p {
+  font-size: 31px;
+  line-height: 100%;
+  letter-spacing: 0.04em;
+  color: #540C50;
+  opacity: 0.8;
+}
+
+footer .footer__bottom {
+  max-width: 1156px;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .footer__left {
+  margin-top: 56px;
+  margin-right: 65px;
+}
+
+footer .footer__link > a {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 100%;
+  color: #7A7A7A;
+}
+
+footer .footer__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 33px;
+}
+
+footer .footer__box > p {
+  max-width: 196.32px;
+  font-size: 14px;
+  line-height: 130%;
+  color: #828282;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  margin-left: 24.08px;
+}
+
+footer .footer__box .socials__text {
+  max-width: 210.09px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #828282;
+  margin-left: 14.71px;
+}
+
+footer .footer__center {
+  margin-top: 56px;
+  margin-right: 57px;
+}
+
+footer .footer__address {
+  max-width: 334.29px;
+  font-size: 14px;
+  line-height: 130%;
+  color: #828282;
+  margin-top: 42px;
+}
+
+footer .footer__right {
+  margin-top: 50px;
+}
+
+footer .footer__socials > a {
+  font-size: 30px;
+  line-height: 24px;
+  color: #7A7A7A;
+}
+
+footer .footer__socials > a:not(:last-child) {
+  margin-right: 40.5px;
+}
+
+.banner {
+  background-image: url(../images/bg_banner.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-bottom: 101px;
+  margin-top: 59.17px;
+}
+
+.banner__title {
+  font-family: 'Merriweather', serif;
+  font-size: 55px;
+  line-height: 100%;
+  max-width: 360px;
+  margin-bottom: 159px;
+}
+
+.banner__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.banner__btn:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.banner__link {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 18px;
+  line-height: 21px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #590D56;
+  margin-left: 29.5px;
 }
 /*# sourceMappingURL=all.css.map */
