--- a/scss/all.scss
+++ b/scss/all.scss
@@ -2,4 +2,5 @@
 @import 'normalize';
 @import 'components/container';
 @import 'blocks/header';
-@import 'blocks/footer'
+@import 'blocks/footer';
+@import 'blocks/banner';
