--- a/scss/all.scss
+++ b/scss/all.scss
@@ -4,3 +4,7 @@
 @import 'blocks/header';
 @import 'blocks/footer';
 @import 'blocks/banner';
+@import 'blocks/about';
+@import 'blocks/process';
+@import 'blocks/opinion';
+@import 'blocks/blog';
