--- a/css/all.css
+++ b/css/all.css
@@ -11,10 +11,52 @@ a {
   color: #000;
 }
 
+ul {
+  list-style: none;
+}
+
 .container {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
+}
+
+.btn {
+  font-size: 18px;
+  line-height: 21px;
+  border-radius: 33.5px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: end;
+      align-self: end;
+  min-width: 263px;
+  padding: 20.71px 0px 25.29px 0px;
+}
+
+.btn-white {
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.btn-purple {
+  color: #47093E;
+  border: 1px solid #47093E;
+}
+
+.btn-purple:hover {
+  background: #590D56;
+  border-radius: 90px;
+  color: #fff;
+}
+
+header {
+  position: relative;
+  z-index: 2;
 }
 
 header .header__wrap {
@@ -34,6 +76,11 @@ header .header__right {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 
 header .header__right .search {
@@ -46,8 +93,100 @@ header .header__right .shops {
   margin-right: 44.09px;
 }
 
-header .header__right .burger__menu {
+header .header__nav {
+  position: absolute;
+  top: 77px;
+  right: -150px;
+  z-index: 10;
+  -webkit-transition: ease-in-out .5s;
+  transition: ease-in-out .5s;
+}
+
+header .header__menu {
   margin-top: 32.17px;
+  cursor: pointer;
+}
+
+.nav {
+  width: 1440px;
+  background-color: #fff;
+  padding: 154px 0 142px 150px;
+}
+
+.nav__wrap {
+  position: relative;
+}
+
+.nav__close {
+  position: absolute;
+  top: -183px;
+  right: 152px;
+  cursor: pointer;
+}
+
+.nav__item {
+  position: relative;
+}
+
+.nav__item:not(:last-child) {
+  margin-bottom: 91px;
+}
+
+.nav__text {
+  font-family: Merriweather;
+  font-size: 16px;
+  line-height: 100%;
+  color: #000000;
+  cursor: pointer;
+}
+
+.nav__text:hover {
+  color: #771373;
+}
+
+.nav__line-1 {
+  position: absolute;
+  left: -150px;
+  bottom: -63px;
+}
+
+.nav__lines-2 {
+  position: absolute;
+  left: -150px;
+  top: 55px;
+}
+
+.nav__lines-3 {
+  position: absolute;
+  left: -150px;
+  bottom: -80px;
+}
+
+#burger {
+  display: none;
+}
+
+#burger:checked ~ .header__nav {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+#burger:checked ~ .header__menu {
+  visibility: hidden;
+}
+
+#burger:checked ~ .search,
+#burger:checked ~ .shops {
+  display: none;
+}
+
+#burger:not(:checked) ~ .header__nav {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 footer {
@@ -59,10 +198,6 @@ footer .footer__top {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
-}
-
-footer .footer__content {
-  margin-top: 29px;
 }
 
 footer .footer__content > p {
@@ -148,19 +283,34 @@ footer .footer__socials > a:not(:last-child) {
 }
 
 .banner {
-  background-image: url(../images/bg_banner.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  padding-bottom: 101px;
-  margin-top: 59.17px;
+  margin-bottom: 151.65px;
+  margin-top: 67px;
+}
+
+.banner__wrap {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.banner__img {
+  position: absolute;
+  top: -5px;
+  left: -150px;
+  z-index: -1;
+}
+
+.banner__content {
+  -ms-flex-preferred-size: 360px;
+      flex-basis: 360px;
 }
 
 .banner__title {
   font-family: 'Merriweather', serif;
   font-size: 55px;
   line-height: 100%;
-  max-width: 360px;
-  margin-bottom: 159px;
+  margin-bottom: 215px;
 }
 
 .banner__btn {
@@ -185,11 +335,100 @@ footer .footer__socials > a:not(:last-child) {
   margin-left: 29.5px;
 }
 
+.banner__slider {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+
+.banner__slider .slider__img {
+  position: absolute;
+  z-index: -1;
+  top: 113px;
+  left: -95px;
+}
+
+.banner__slider .slider__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 31px;
+  margin-bottom: 38px;
+  margin-left: 270px;
+}
+
+.banner__slider .slider__buttons .arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
+.marquee {
+  display: block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  border-top: 1px solid #47093E;
+  border-bottom: 1px solid #47093E;
+}
+
+.marquee__text {
+  font-weight: 300;
+  font-size: 48px;
+  line-height: 56px;
+  text-transform: uppercase;
+  color: #590D56;
+  padding-top: 16px;
+  padding-bottom: 22px;
+}
+
+.marquee__text > span {
+  display: inline-block;
+  padding-left: 100%;
+  -webkit-animation: scroll 20s infinite linear;
+          animation: scroll 20s infinite linear;
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+            transform: translate(-100%, 0);
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+            transform: translate(-100%, 0);
+  }
+}
+
 .about {
   padding-top: 103px;
 }
 
 .about__top {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -202,7 +441,7 @@ footer .footer__socials > a:not(:last-child) {
   display: flex;
 }
 
-.about__top__group:not(:last-child) {
+.about__top__group:not(:nth-child(3)) {
   margin-right: 128px;
 }
 
@@ -219,6 +458,12 @@ footer .footer__socials > a:not(:last-child) {
 
 .about__top__group > p:not(:last-child) {
   max-width: 166px;
+}
+
+.about__top .info {
+  position: absolute;
+  top: 30px;
+  right: 20px;
 }
 
 .about__bottom {
@@ -332,17 +577,21 @@ footer .footer__socials > a:not(:last-child) {
 }
 
 .process {
-  background-image: url(../images/process_bg.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  padding-top: 350px;
-  padding-bottom: 300px;
+  padding-top: 300px;
+  padding-bottom: 126px;
 }
 
 .process__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+}
+
+.process__img {
+  position: absolute;
+  top: -350px;
+  left: -150px;
 }
 
 .process__content {
@@ -350,6 +599,7 @@ footer .footer__socials > a:not(:last-child) {
       -ms-flex: 0 1 264px;
           flex: 0 1 264px;
   margin-right: 27px;
+  z-index: 2;
 }
 
 .process__content > h3 {
@@ -367,9 +617,10 @@ footer .footer__socials > a:not(:last-child) {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  z-index: 2;
 }
 
-.process__slider .slider__top {
+.process__slider .slider {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -378,27 +629,28 @@ footer .footer__socials > a:not(:last-child) {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  margin-bottom: 35px;
 }
 
-.process__slider .slider__top > img {
+.process__slider .slider > img {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
 }
 
-.process__slider .slider__top .second {
+.process__slider .slider .second {
   -webkit-filter: drop-shadow(-10px 10px 20px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(-10px 10px 20px rgba(0, 0, 0, 0.25));
 }
 
-.process__slider .slider__top .play {
+.process__slider .slider .play {
   position: absolute;
   z-index: 2;
   top: 102px;
   right: 293px;
 }
 
-.process__slider .slider__btn {
+.process__slider .slider__buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -411,24 +663,12 @@ footer .footer__socials > a:not(:last-child) {
   gap: 28px;
 }
 
-.process__slider .slider__btn .arrow__right {
+.process__slider .slider__buttons .arrow__right {
   opacity: 0.5;
 }
 
-.process__slider .slider__bottom {
-  -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
-  border: 1px solid #fff;
-  border-radius: 33.5px;
-  padding: 20.71px 78px 25.29px;
-  margin-top: 35px;
-}
-
-.process__slider .slider__bottom > a {
-  font-size: 18px;
-  line-height: 21px;
-  color: #fff;
+.opinion {
+  margin-top: 86px;
 }
 
 .opinion__wrap {
@@ -442,6 +682,7 @@ footer .footer__socials > a:not(:last-child) {
       -ms-flex: 0 1 240px;
           flex: 0 1 240px;
   margin-right: 53px;
+  z-index: 2;
 }
 
 .opinion__content > h4 {
@@ -459,6 +700,7 @@ footer .footer__socials > a:not(:last-child) {
 }
 
 .opinion__box {
+  z-index: 2;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -478,35 +720,107 @@ footer .footer__socials > a:not(:last-child) {
   z-index: 2;
 }
 
-.opinion__btn {
+.opinion__buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 16px;
 }
 
-.opinion__btn .btn:hover {
+.opinion__buttons .btn-mini:hover {
   fill: #590D56;
 }
 
-.blog {
-  background-image: url(../images/blog_bg.png);
-  background-position: center;
+.shop {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(-7.14%, rgba(71, 9, 62, 0.5)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(360deg, rgba(71, 9, 62, 0.5) -7.14%, rgba(255, 255, 255, 0) 100%);
+  background-blend-mode: multiply;
+  background-size: 100% 10%;
   background-repeat: no-repeat;
+  background-position: bottom;
+  padding-bottom: 94px;
+}
+
+.shop__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.shop__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 263px;
+          flex: 0 1 263px;
+  margin-right: 29px;
+}
+
+.shop__content > h6 {
+  font-family: Merriweather;
+  font-size: 30px;
+  line-height: 120%;
+  color: #000000;
+  margin-bottom: 26px;
+}
+
+.shop__content > p {
+  font-size: 16px;
+  line-height: 154.8%;
+  color: #777777;
+}
+
+.shop__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.shop__img {
+  position: relative;
+  -ms-flex-preferred-size: 436px;
+      flex-basis: 436px;
+}
+
+.shop__img > img {
+  position: absolute;
+  right: 112px;
+}
+
+.shop__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
+.blog {
+  margin-bottom: 150px;
 }
 
 .blog__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   padding-top: 237px;
+}
+
+.blog__img {
+  position: absolute;
+  left: -150px;
+  top: -21px;
+  z-index: -1;
 }
 
 .blog__content {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 263px;
           flex: 0 1 263px;
-  margin-top: 237px;
+  z-index: 2;
+  margin-right: 29px;
 }
 
 .blog__content > h5 {
@@ -520,52 +834,62 @@ footer .footer__socials > a:not(:last-child) {
 .blog__content > p {
   font-size: 16px;
   line-height: 154.8%;
+  color: #777777;
   color: #FFFFFF;
 }
 
-.blog__box {
+.blog__grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.blog__grid .grid__box {
+  z-index: 2;
+  display: -ms-grid;
+  display: grid;
   gap: 29px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -ms-grid-columns: (263px)[3];
+      grid-template-columns: repeat(3, 263px);
+  -ms-grid-rows: 263px 165px;
+      grid-template-rows: 263px 165px;
+  margin-bottom: 35.99px;
 }
 
-.blog__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.blog__item > p {
+.blog__grid .grid__item > p {
   font-weight: 300;
   font-size: 36px;
   line-height: 100%;
   color: #FFFFFF;
 }
 
-.blog__item--sport {
+.blog__grid .grid__item-1 {
   background: linear-gradient(179.96deg, rgba(71, 9, 62, 0.9) -0.95%, rgba(71, 9, 62, 0) 99.97%), url(../images/sport.jpg);
-  padding: 29.04px 17px 148px 28px;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 3;
+  padding: 29.04px 17px 147.99px 28px;
 }
 
-.blog__item--doc {
+.blog__grid .grid__item-2 {
   background: linear-gradient(180.79deg, rgba(71, 9, 62, 0.8) 0.68%, rgba(71, 9, 62, 0) 99.32%), url(../images/doc.jpg);
   padding: 24px 24px 20.46px 21px;
 }
 
-.blog__item--food {
+.blog__grid .grid__item-3 {
   background: linear-gradient(180.68deg, rgba(71, 9, 62, 0.9) 0.59%, rgba(71, 9, 62, 0) 99.41%), url(../images/food.jpg);
   padding: 24px 17px 20.46px 28px;
 }
 
-.blog__item--bg {
+.blog__grid .grid__item-4 {
   background: #47093E;
-  padding: 31px 293px 23.12px 21px;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 4;
+  padding: 31.1px 293px 23.12px 21px;
 }
 /*# sourceMappingURL=all.css.map */
