--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -1,18 +1,24 @@
 .banner {
-    // height: 760.99px;
-    background-image: url(../images/bg_banner.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    padding-bottom: 101px;
-    margin-top: 59.17px;
-    // &__wrap {
-    // }
+    margin-bottom: 151.65px;
+    margin-top: 67px;
+    &__wrap {
+        position: relative;
+        display: flex;
+    }
+    &__img {
+        position: absolute;
+        top: -5px;
+        left: -150px;
+        z-index: -1;
+    }
+    &__content {
+        flex-basis: 360px
+    }
     &__title {
         font-family: 'Merriweather', serif;
         font-size: 55px;
         line-height: 100%;
-        max-width: 360px;
-        margin-bottom: 159px;
+        margin-bottom: 215px;
     }
     &__btn {
         display: flex;
@@ -27,5 +33,30 @@
         text-decoration-line: underline;
         color: #590D56;
         margin-left: 29.5px;
+    }
+    &__slider {
+        position: relative;
+        display: flex;
+        align-items: end;
+        .slider {
+            &__img {
+                position: absolute;
+                z-index: -1;
+                top: 113px;
+                left: -95px;
+            }
+            &__buttons {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 31px;
+                margin-bottom: 38px;
+                margin-left: 270px;
+                .arrows {
+                    display: flex;
+                    gap: 30px;
+                }
+            }
+        }
     }
 }
