--- a/css/all.css
+++ b/css/all.css
@@ -15,10 +15,30 @@ ul {
   list-style: none;
 }
 
+.mobile {
+  display: none;
+}
+
+@media (max-width: 320px) {
+  .laptop {
+    display: none;
+  }
+  .mobile {
+    display: block;
+  }
+}
+
 .container {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
+}
+
+@media (max-width: 320px) {
+  .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .btn {
@@ -52,6 +72,22 @@ ul {
   background: #590D56;
   border-radius: 90px;
   color: #fff;
+}
+
+@media (max-width: 320px) {
+  .btn {
+    font-size: 14px;
+    line-height: 16px;
+    color: #5B0E58;
+    border: 1px solid #5B0E58;
+    min-width: 132px;
+    padding: 10.51px 0 7.49px 0;
+  }
+  .btn:hover {
+    background: #590D56;
+    border-radius: 90px;
+    color: #fff;
+  }
 }
 
 header {
@@ -138,6 +174,7 @@ header .header__menu {
   line-height: 100%;
   color: #000000;
   cursor: pointer;
+  z-index: 11;
 }
 
 .nav__text:hover {
@@ -146,18 +183,21 @@ header .header__menu {
 
 .nav__line-1 {
   position: absolute;
+  z-index: -1;
   left: -150px;
   bottom: -63px;
 }
 
 .nav__lines-2 {
   position: absolute;
+  z-index: -1;
   left: -150px;
   top: 55px;
 }
 
 .nav__lines-3 {
   position: absolute;
+  z-index: -1;
   left: -150px;
   bottom: -80px;
 }
@@ -173,13 +213,10 @@ header .header__menu {
   transition: .5s;
 }
 
-#burger:checked ~ .header__menu {
-  visibility: hidden;
-}
-
+#burger:checked ~ .header__menu,
 #burger:checked ~ .search,
 #burger:checked ~ .shops {
-  display: none;
+  visibility: hidden;
 }
 
 #burger:not(:checked) ~ .header__nav {
@@ -187,6 +224,37 @@ header .header__menu {
   opacity: 0;
   -webkit-transition: .5s;
   transition: .5s;
+}
+
+@media (max-width: 320px) {
+  header .header__left {
+    margin-top: 16px;
+  }
+  header .header__right .search {
+    margin-top: 18.65px;
+    margin-right: 9.45px;
+  }
+  header .header__right .shops {
+    margin-top: 18.65px;
+    margin-right: 13.9px;
+  }
+  header .header__nav {
+    top: 75px;
+  }
+  header .header__menu {
+    margin-top: 20.73px;
+  }
+  .nav {
+    display: none;
+  }
+  .nav__close {
+    top: -203px;
+  }
+  #burger:checked ~ .header__menu,
+  #burger:checked ~ .search,
+  #burger:checked ~ .shops {
+    visibility: visible;
+  }
 }
 
 footer {
@@ -282,9 +350,15 @@ footer .footer__socials > a:not(:last-child) {
   margin-right: 40.5px;
 }
 
+@media (max-width: 320px) {
+  footer {
+    display: none;
+  }
+}
+
 .banner {
-  margin-bottom: 151.65px;
   margin-top: 67px;
+  margin-bottom: 151.65px;
 }
 
 .banner__wrap {
@@ -375,6 +449,45 @@ footer .footer__socials > a:not(:last-child) {
   gap: 30px;
 }
 
+@media (max-width: 320px) {
+  .banner {
+    margin-top: 30px;
+    margin-bottom: 21px;
+  }
+  .banner__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .banner__img {
+    top: 43px;
+    left: 0;
+  }
+  .banner__title {
+    font-size: 45px;
+    line-height: 90%;
+    margin-bottom: 12px;
+  }
+  .banner__buttons {
+    display: none;
+  }
+  .banner__slider .slider__img {
+    top: -180px;
+    left: -14px;
+  }
+  .banner__slider .slider__buttons {
+    gap: 15px;
+    margin: 40px 0 0 78px;
+  }
+  .banner__slider .slider__buttons .arrows {
+    gap: 15px;
+  }
+}
+
 .marquee {
   display: block;
   width: 100%;
@@ -420,6 +533,12 @@ footer .footer__socials > a:not(:last-child) {
   100% {
     -webkit-transform: translate(-100%, 0);
             transform: translate(-100%, 0);
+  }
+}
+
+@media (max-width: 320px) {
+  .marquee {
+    display: none;
   }
 }
 
@@ -576,6 +695,12 @@ footer .footer__socials > a:not(:last-child) {
   margin-bottom: 32px;
 }
 
+@media (max-width: 320px) {
+  .about {
+    display: none;
+  }
+}
+
 .process {
   padding-top: 300px;
   padding-bottom: 126px;
@@ -667,6 +792,12 @@ footer .footer__socials > a:not(:last-child) {
   opacity: 0.5;
 }
 
+@media (max-width: 320px) {
+  .process {
+    display: none;
+  }
+}
+
 .opinion {
   margin-top: 86px;
 }
@@ -729,6 +860,12 @@ footer .footer__socials > a:not(:last-child) {
 
 .opinion__buttons .btn-mini:hover {
   fill: #590D56;
+}
+
+@media (max-width: 320px) {
+  .opinion {
+    display: none;
+  }
 }
 
 .shop {
@@ -794,6 +931,12 @@ footer .footer__socials > a:not(:last-child) {
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
+}
+
+@media (max-width: 320px) {
+  .shop {
+    display: none;
+  }
 }
 
 .blog {
@@ -891,5 +1034,11 @@ footer .footer__socials > a:not(:last-child) {
       grid-column-start: 2;
   grid-column-end: 4;
   padding: 31.1px 293px 23.12px 21px;
+}
+
+@media (max-width: 320px) {
+  .blog {
+    display: none;
+  }
 }
 /*# sourceMappingURL=all.css.map */
