--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,5 +1,6 @@
 @import 'mixins';
 @import 'normalize';
+@import 'adaptive';
 @import 'components/container';
 @import 'components/buttons';
 @import 'blocks/header';
