--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -3,3 +3,10 @@
     width: 100%;
     margin: 0 auto;
 }
+
+@media (max-width:320px) {
+    .container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
