--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,14 +1,14 @@
-@import 'mixins';
-@import 'normalize';
-@import 'adaptive';
-@import 'components/container';
-@import 'components/buttons';
-@import 'blocks/header';
-@import 'blocks/footer';
-@import 'blocks/banner';
-@import 'blocks/marquee';
-@import 'blocks/about';
-@import 'blocks/process';
-@import 'blocks/opinion';
-@import 'blocks/shop';
-@import 'blocks/blog';
+@import "mixins";
+@import "normalize";
+@import "adaptive";
+@import "components/container";
+@import "components/buttons";
+@import "blocks/header";
+@import "blocks/footer";
+@import "blocks/about";
+@import "blocks/marquee";
+@import "blocks/features";
+@import "blocks/process";
+@import "blocks/opinion";
+@import "blocks/shop";
+@import "blocks/blog";
