--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,109 +1,100 @@
 .about {
-    padding-top: 103px;
-    &__top {
+    margin-top: 67px;
+    margin-bottom: 151.65px;
+    &__wrap {
         position: relative;
         display: flex;
-        margin-bottom: 128px;
-        &__group {
-            display: flex;
-            &:not(:nth-child(3)) {
-                margin-right: 128px;
-            }
-            &>p {
-                font-family: Merriweather;
-                font-size: 16px;
-                line-height: 154.8%;
-                color: #242424;
-                align-self: center;
-                margin-left: 30px;
-                &:not(:last-child) {
-                    max-width: 166px;
-                }
-            }
-        }
-        .info {
-            position: absolute;
-            top: 30px;
-            right: 20px;
-        }
     }
-    &__bottom {
-        display: flex;
-        gap: 73px;
+    &__img {
+        position: absolute;
+        top: -5px;
+        left: -150px;
+        z-index: -1;
     }
     &__content {
-        flex: 0 1 263px;
-        &>h2 {
-            @include title;
-            margin-bottom: 38px;
-        }
-        &>p {
-            @include text;
-        }
+        flex-basis: 360px;
     }
-    &__box {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        &>.about__group {
-            &:first-child>svg {
-                top: 13px;
-                left: 118px;
-            }
-            &:last-child>svg {
-                top: 70px;
-                left: 125px;
-            }
-        }
-    }
-    &__group {
-        position: relative;
-        display: flex;
-        flex-basis: 194px;
-        gap: 186px;
-        border-top: 1px solid #47093E;
-        &:last-child {
-            border-bottom: 1px solid #47093E;
-        }
-        &>svg {
-            position: absolute;
-        }
-        .second {
-            top: 35px;
-            right: 0;
-        }
-        .third {
-            bottom: 81px;
-            left: 51px;
-        }
-        .fourth {
-            top: 82px;
-            right: 42px;
-            z-index: 1;
-        }
-        &>p {
-            font-weight: 300;
-            font-size: 30px;
-            line-height: 100%;
-            align-self: center;
-            color: #000000;
-            flex-basis: 344px;
-        }
+    &__title {
+        font-family: "Merriweather", serif;
+        font-size: 55px;
+        line-height: 100%;
+        margin-bottom: 215px;
     }
     &__btn {
+        display: flex;
+        &:not(:last-child) {
+            margin-bottom: 32px;
+        }
+    }
+    &__link {
+        align-self: center;
         font-size: 18px;
         line-height: 21px;
         text-decoration-line: underline;
-        border: 0;
-        background-color: #fff;
-        color: #590D56;
-        align-self: flex-end;
-        margin-bottom: 32px;
+        color: #590d56;
+        margin-left: 29.5px;
+    }
+    &__slider {
+        position: relative;
+        display: flex;
+        align-items: end;
+        .slider {
+            &__img {
+                position: absolute;
+                z-index: -1;
+                top: 113px;
+                left: -95px;
+            }
+            &__buttons {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 31px;
+                margin-bottom: 38px;
+                margin-left: 270px;
+                .arrows {
+                    display: flex;
+                    gap: 30px;
+                }
+            }
+        }
     }
 }
 
 @media (max-width: 320px) {
     .about {
-        display: none;
+        margin-top: 30px;
+        margin-bottom: 21px;
+        &__wrap {
+            display: flex;
+            flex-direction: column;
+        }
+        &__img {
+            top: 43px;
+            left: 0;
+        }
+        &__title {
+            font-size: 45px;
+            line-height: 90%;
+            margin-bottom: 12px;
+        }
+        &__buttons {
+            display: none;
+        }
+        &__slider {
+            .slider {
+                &__img {
+                    top: -180px;
+                    left: -14px;
+                }
+                &__buttons {
+                    gap: 15px;
+                    margin: 40px 0 0 78px;
+                    .arrows {
+                        gap: 15px;
+                    }
+                }
+            }
+        }
     }
 }
