--- a/scss/all.scss
+++ b/scss/all.scss
@@ -2,7 +2,7 @@
 @import "normalize";
 @import "adaptive";
 @import "components/container";
-@import "components/buttons";
+@import "components/links";
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/about";
