--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -1,35 +1,35 @@
 .features {
     padding-top: 103px;
-    &__top {
+    &__columns {
         position: relative;
         display: flex;
         justify-content: space-between;
         min-height: 195px;
         align-items: flex-start;
-        &__group {
-            display: flex;
-            &:not(:nth-child(3)) {
-                max-width: 262px;
-            }
-            &:nth-child(3) {
-                max-width: 360px;
-            }
-            & > p {
-                font-family: Merriweather;
-                font-size: 16px;
-                line-height: 154.8%;
-                color: #242424;
-                align-self: center;
-                margin-left: 30px;
-                &:not(:last-child) {
-                    max-width: 166px;
-                }
-            }
-        }
         .info {
             position: absolute;
             top: 30px;
             right: 20px;
+        }
+    }
+    &__column {
+        display: flex;
+        &:not(:nth-child(3)) {
+            max-width: 262px;
+        }
+        &:nth-child(3) {
+            max-width: 360px;
+        }
+        & > p {
+            font-family: Merriweather;
+            font-size: 16px;
+            line-height: 154.8%;
+            color: #242424;
+            align-self: center;
+            margin-left: 30px;
+            &:not(:last-child) {
+                max-width: 166px;
+            }
         }
     }
     &__bottom {
