--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -18,7 +18,7 @@
         font-family: "Merriweather", serif;
         font-size: 55px;
         line-height: 100%;
-        margin-bottom: 215px;
+        min-height: 435px;
     }
     &__btn {
         display: flex;
