--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -5,7 +5,7 @@
         position: relative;
         display: flex;
     }
-    &__img {
+    &__bg {
         position: absolute;
         top: -5px;
         left: -150px;
