--- a/scss/blocks/_blog.scss
+++ b/scss/blocks/_blog.scss
@@ -5,7 +5,7 @@
         position: relative;
         padding-top: 237px;
     }
-    &__img {
+    &__bg {
         position: absolute;
         left: -150px;
         top: -21px;
@@ -15,13 +15,13 @@
         flex: 0 1 263px;
         z-index: 2;
         margin-right: 29px;
-        &>h5 {
+        & > h5 {
             @include title;
             margin-bottom: 26px;
         }
-        &>p {
+        & > p {
             @include text;
-            color: #FFFFFF;
+            color: #ffffff;
         }
     }
     &__grid {
@@ -37,28 +37,31 @@
                 margin-bottom: 35.99px;
             }
             &__item {
-                &>p {
+                & > p {
                     font-weight: 300;
                     font-size: 36px;
                     line-height: 100%;
-                    color: #FFFFFF;
+                    color: #ffffff;
                 }
                 &-1 {
-                    background: linear-gradient(179.96deg, rgba(71, 9, 62, 0.9) -0.95%, rgba(71, 9, 62, 0) 99.97%), url(../images/sport.jpg);
+                    background: linear-gradient(179.96deg, rgba(71, 9, 62, 0.9) -0.95%, rgba(71, 9, 62, 0) 99.97%),
+                        url(../images/sport.jpg);
                     grid-row-start: 1;
                     grid-row-end: 3;
                     padding: 29.04px 17px 147.99px 28px;
                 }
                 &-2 {
-                    background: linear-gradient(180.79deg, rgba(71, 9, 62, 0.8) 0.68%, rgba(71, 9, 62, 0) 99.32%), url(../images/doc.jpg);
+                    background: linear-gradient(180.79deg, rgba(71, 9, 62, 0.8) 0.68%, rgba(71, 9, 62, 0) 99.32%),
+                        url(../images/doc.jpg);
                     padding: 24px 24px 20.46px 21px;
                 }
                 &-3 {
-                    background: linear-gradient(180.68deg, rgba(71, 9, 62, 0.9) 0.59%, rgba(71, 9, 62, 0) 99.41%), url(../images/food.jpg);
+                    background: linear-gradient(180.68deg, rgba(71, 9, 62, 0.9) 0.59%, rgba(71, 9, 62, 0) 99.41%),
+                        url(../images/food.jpg);
                     padding: 24px 17px 20.46px 28px;
                 }
                 &-4 {
-                    background: #47093E;
+                    background: #47093e;
                     grid-column-start: 2;
                     grid-column-end: 4;
                     padding: 31.1px 293px 23.12px 21px;
