--- a/css/all.css
+++ b/css/all.css
@@ -296,7 +296,7 @@ footer .footer__socials > a:not(:last-child) {
   position: relative;
   display: flex;
 }
-.about__img {
+.about__bg {
   position: absolute;
   top: -5px;
   left: -150px;
@@ -555,7 +555,7 @@ footer .footer__socials > a:not(:last-child) {
   display: flex;
   position: relative;
 }
-.process__img {
+.process__bg {
   position: absolute;
   top: -350px;
   left: -150px;
@@ -717,7 +717,7 @@ footer .footer__socials > a:not(:last-child) {
   position: relative;
   padding-top: 237px;
 }
-.blog__img {
+.blog__bg {
   position: absolute;
   left: -150px;
   top: -21px;
@@ -739,7 +739,7 @@ footer .footer__socials > a:not(:last-child) {
   font-size: 16px;
   line-height: 154.8%;
   color: #777777;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .blog__grid {
   display: flex;
@@ -757,7 +757,7 @@ footer .footer__socials > a:not(:last-child) {
   font-weight: 300;
   font-size: 36px;
   line-height: 100%;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .blog__grid .grid__item-1 {
   background: linear-gradient(179.96deg, rgba(71, 9, 62, 0.9) -0.95%, rgba(71, 9, 62, 0) 99.97%), url(../images/sport.jpg);
@@ -774,7 +774,7 @@ footer .footer__socials > a:not(:last-child) {
   padding: 24px 17px 20.46px 28px;
 }
 .blog__grid .grid__item-4 {
-  background: #47093E;
+  background: #47093e;
   grid-column-start: 2;
   grid-column-end: 4;
   padding: 31.1px 293px 23.12px 21px;
