--- a/scss/blocks/_process.scss
+++ b/scss/blocks/_process.scss
@@ -5,7 +5,7 @@
         display: flex;
         position: relative;
     }
-    &__img {
+    &__bg {
         position: absolute;
         top: -350px;
         left: -150px;
@@ -14,7 +14,7 @@
         flex: 0 1 264px;
         margin-right: 27px;
         z-index: 2;
-        &>h3 {
+        & > h3 {
             @include title;
         }
     }
@@ -28,7 +28,7 @@
             gap: 30px;
             flex-grow: 1;
             margin-bottom: 35px;
-            &>img {
+            & > img {
                 align-self: center;
             }
             .second {
